--- a/docs/multimodal.ipynb
+++ b/docs/multimodal.ipynb
@@ -152,6 +152,65 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "lb.Gene.validate(mdata[\"rna\"].var_names, lb.Gene.symbol);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "genes = lb.Gene.from_values(mdata[\"rna\"].var_names, lb.Gene.symbol)\n",
+    "ln.save(genes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mdata[\"rna\"].var_names = lb.Gene.standardize(mdata[\"rna\"].var_names, lb.Gene.symbol)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "validated = lb.Gene.validate(mdata[\"rna\"].var_names, lb.Gene.symbol)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_genes = [\n",
+    "    lb.Gene(symbol=symbol, species=lb.settings.species)\n",
+    "    for symbol in mdata[\"rna\"].var_names[~validated]\n",
+    "]\n",
+    "ln.save(new_genes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lb.Gene.validate(mdata[\"rna\"].var_names, lb.Gene.symbol);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "feature_set_rna = ln.FeatureSet.from_values(\n",
     "    mdata[\"rna\"].var_names, field=lb.Gene.symbol\n",
     ")"
@@ -164,6 +223,34 @@
    "outputs": [],
    "source": [
     "mdata[\"adt\"].var_names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lb.CellMarker.validate(mdata[\"adt\"].var_names, field=lb.CellMarker.name);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "markers = lb.CellMarker.from_values(mdata[\"adt\"].var_names, field=lb.CellMarker.name)\n",
+    "ln.save(markers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lb.CellMarker.validate(mdata[\"adt\"].var_names, field=lb.CellMarker.name);"
    ]
   },
   {
@@ -239,7 +326,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "feature_set_obs = ln.FeatureSet.from_df(obs, \"metadata\")"
+    "features = ln.Feature.from_df(obs)\n",
+    "ln.save(features)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "feature_set_obs = ln.FeatureSet.from_df(obs)"
    ]
   },
   {
@@ -257,7 +354,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gene_targets = lb.Gene.from_values(obs[\"gene_target\"], \"symbol\")\n",
+    "gene_targets = lb.Gene.from_values(obs[\"gene_target\"], lb.Gene.symbol)\n",
     "ln.save(gene_targets)\n",
     "file.add_labels(gene_targets, feature=\"gene_target\")"
    ]
@@ -268,9 +365,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "labels = []\n",
+    "nt = ln.Label(name=\"NT\", description=\"Non-targeting control of perturbations\")\n",
+    "nt.save()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file.add_labels(nt, feature=\"gene_target\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "for col in [\"orig.ident\", \"perturbation\", \"replicate\", \"Phase\", \"guide_ID\"]:\n",
-    "    labels += ln.Label.from_values(obs[col])"
+    "    labels = [ln.Label(name=name) for name in obs[col].unique()]\n",
+    "    ln.save(labels)"
    ]
   },
   {
