--- a/docs/birds-eye.ipynb
+++ b/docs/birds-eye.ipynb
@@ -27,11 +27,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Data lineage tracks data's journey, detailing its origins, transformations, and interactions to trace the source of biological insights, verify experimental outcomes, meet regulatory standards, and increase the robustness of research.\n",
+    "Data lineage tracks data's journey, detailing its origins, transformations, and interactions to trace biological insights, verify experimental outcomes, meet regulatory standards, and increase the robustness of research.\n",
     "While tracking data lineage is easier when it is governed by deterministic pipelines, it becomes hard when its governed by interactive human-driven analyses.\n",
     "\n",
-    "Here, we'll backtrace file transformations through notebooks, pipelines & app uploads in a research project based on [Schmidt22](https://pubmed.ncbi.nlm.nih.gov/35113687/).\n",
-    "The study conducted genome-wide CRISPR activation and interference screens in primary human T cells to identify gene networks controlling IL-2 and IFN-γ production revealing insights into cytokine regulation."
+    "Here, we'll backtrace file transformations through notebooks, pipelines & app uploads in a research project based on [Schmidt22](https://pubmed.ncbi.nlm.nih.gov/35113687/) which conducted genome-wide CRISPR activation and interference screens in primary human T cells to identify gene networks controlling IL-2 and IFN-γ production."
    ]
   },
   {
@@ -411,19 +410,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file = ln.File.filter(key__contains=\"figures/matrixplot\").one()\n",
-    "file.stage()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "file = ln.File.filter(key__contains=\"figures/matrixplot\").one\n",
+    "\n",
     "from IPython.display import Image, display\n",
     "\n",
-    "display(Image(filename=file.stage()))"
+    "file.stage()\n",
+    "display(Image(filename=file.path()))"
    ]
   },
   {
