--- a/docs/birds-eye.ipynb
+++ b/docs/birds-eye.ipynb
@@ -410,7 +410,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file = ln.File.filter(key__contains=\"figures/matrixplot\").one\n",
+    "file = ln.File.filter(key__contains=\"figures/matrixplot\").one()\n",
     "\n",
     "from IPython.display import Image, display\n",
     "\n",
