--- a/docs/birds-eye.ipynb
+++ b/docs/birds-eye.ipynb
@@ -415,7 +415,7 @@
     "from IPython.display import Image, display\n",
     "\n",
     "file.stage()\n",
-    "display(Image(filename=file.path()))"
+    "display(Image(filename=file.path))"
    ]
   },
   {
