Address LH birds eye review (#47)
Signed-off-by: zethson <lukas.heumos@posteo.net>

--- a/docs/birds-eye.ipynb
+++ b/docs/birds-eye.ipynb
@@ -16,23 +16,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Background"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here, you'll backtrace file transformations through notebooks, pipelines & app uploads in a research project based on [Schmidt22](https://pubmed.ncbi.nlm.nih.gov/35113687/).\n",
+    "Data lineage tracks data's journey, detailing its origins, transformations, and interactions to trace biological insights, verify experimental outcomes, meet regulatory standards, and increase the robustness of research.\n",
+    "While tracking data lineage is easier when it is governed by deterministic pipelines, it becomes hard when its governed by interactive human-driven analyses.\n",
     "\n",
-    "It's a mix of a guide & a demo usecase.\n",
-    "\n",
-    ":::{dropdown} Why should I care about data lineage?\n",
-    "\n",
-    "Data lineage enables to trace the origin of biological insights, verify experimental outcomes, meet regulatory standards, and increase the reproducibility & reliability research.\n",
-    "\n",
-    "While tracking data lineage is easier when it's governed by deterministic pipelines, it becomes hard when its governed by interactive human-driven analyses.\n",
-    "\n",
-    "This is where LaminDB fills a gap in the tools space.\n",
-    "\n",
-    ":::"
+    "Here, we'll backtrace file transformations through notebooks, pipelines & app uploads in a research project based on [Schmidt22](https://pubmed.ncbi.nlm.nih.gov/35113687/) which conducted genome-wide CRISPR activation and interference screens in primary human T cells to identify gene networks controlling IL-2 and IFN-γ production."
    ]
   },
   {
@@ -82,7 +80,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We'll need toy data:"
+    "We simulate the raw data processing of Schmidt22 with toy data in a real world setting with multiple collaborators (here testuser1 and testuser2):"
    ]
   },
   {
@@ -96,13 +94,13 @@
    "outputs": [],
    "source": [
     "assert ln.setup.settings.user.handle == \"testuser1\"\n",
+    "\n",
     "bfx_run_output = ln.dev.datasets.dir_scrnaseq_cellranger(\n",
     "    \"perturbseq\", basedir=ln.settings.storage, output_only=False\n",
     ")\n",
     "ln.track(ln.Transform(name=\"Chromium 10x upload\", type=\"pipeline\"))\n",
     "ln.File(bfx_run_output.parent / \"fastq/perturbseq_R1_001.fastq.gz\").save()\n",
-    "ln.File(bfx_run_output.parent / \"fastq/perturbseq_R2_001.fastq.gz\").save()\n",
-    "ln.setup.login(\"testuser2\")"
+    "ln.File(bfx_run_output.parent / \"fastq/perturbseq_R2_001.fastq.gz\").save()"
    ]
   },
   {
@@ -121,6 +119,15 @@
     "When working with a pipeline, we'll register it before running it.\n",
     "\n",
     "This only happens once and could be done by anyone on your team."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ln.setup.login(\"testuser2\")"
    ]
   },
   {
@@ -274,15 +281,14 @@
     "ln.setup.login(\"testuser1\")\n",
     "transform = ln.Transform(name=\"Upload GWS CRISPRa result\", type=\"app\")\n",
     "ln.track(transform)\n",
-    "\n",
-    "# upload and analyze the GWS data\n",
     "filepath = ln.dev.datasets.schmidt22_crispra_gws_IFNG(ln.settings.storage)\n",
     "file = ln.File(filepath, description=\"Raw data of schmidt22 crispra GWS\")\n",
     "file.save()\n",
+    "\n",
+    "# upload and analyze the GWS data\n",
     "ln.setup.login(\"testuser2\")\n",
     "transform = ln.Transform(name=\"GWS CRIPSRa analysis\", type=\"notebook\")\n",
     "ln.track(transform)\n",
-    "\n",
     "file_wgs = ln.File.filter(key=\"schmidt22-crispra-gws-IFNG.csv\").one()\n",
     "df = file_wgs.load().set_index(\"id\")\n",
     "hits_df = df[df[\"pos|fdr\"] < 0.01].copy()\n",
@@ -294,7 +300,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's see how the data lineage of this looks:"
+    "Let's see what the data lineage of this looks:"
    ]
   },
   {
@@ -334,6 +340,7 @@
     "file_ps = ln.File.filter(description__icontains=\"perturbseq\").one()\n",
     "adata = file_ps.load()\n",
     "screen_hits = file_hits.load()\n",
+    "\n",
     "import scanpy as sc\n",
     "\n",
     "sc.tl.score_genes(adata, adata.var_names.intersection(screen_hits.index).tolist())\n",
@@ -404,7 +411,11 @@
    "outputs": [],
    "source": [
     "file = ln.File.filter(key__contains=\"figures/matrixplot\").one()\n",
-    "file.stage()"
+    "\n",
+    "from IPython.display import Image, display\n",
+    "\n",
+    "file.stage()\n",
+    "display(Image(filename=file.path))"
    ]
   },
   {
@@ -686,7 +697,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.10.12"
   },
   "nbproject": {
    "id": "1LCd8kco9lZU",
