address LH review
Signed-off-by: zethson <lukas.heumos@posteo.net>

--- a/docs/flow.ipynb
+++ b/docs/flow.ipynb
@@ -16,6 +16,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Background"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Flow cytometry is a technique used to analyze and sort cells or particles based on their physical and chemical characteristics as they flow in a fluid stream through a laser beam.\n",
+    "\n",
+    "Here, we'll transform, validate and register two flow cytometry datasets ([Alpert19](https://www.nature.com/articles/s41591-019-0381-y) and [FlowIO sample](https://github.com/whitews/FlowIO/blob/master/examples/fcs_files/100715.fcs)) to demonstrate how to create and query a custom flow cytometry registry."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -40,7 +56,7 @@
     "import lnschema_bionty as lb\n",
     "import readfcs\n",
     "\n",
-    "lb.settings.species = \"human\"  # globally set species"
+    "lb.settings.species = \"human\""
    ]
   },
   {
@@ -56,7 +72,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Transform ![](https://img.shields.io/badge/Transform-10b981)\n",
+    "## Alpert19"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Transform ![](https://img.shields.io/badge/Transform-10b981)\n",
     "\n",
     "(Here we skip steps of data transformations, which often includes filtering, normalizing, or formatting data.)"
    ]
@@ -103,7 +126,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Validate ![](https://img.shields.io/badge/Validate-10b981) "
+    "### Validate ![](https://img.shields.io/badge/Validate-10b981) "
    ]
   },
   {
@@ -128,7 +151,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We see that many features aren't validated. Let's standardize the identifiers:"
+    "We see that many features aren't validated. Let's standardize the identifiers first to get rid of synonyms:"
    ]
   },
   {
@@ -144,7 +167,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now things look much better, but we still have 5 CellMaker records that seem more like metadata."
+    "Great, now we can validate our markers once more:"
    ]
   },
   {
@@ -160,7 +183,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Hence, let's curate the AnnData a bit more.\n",
+    "Things look much better, but we still have 5 CellMaker records that seem more like metadata.\n",
+    "Hence, let's curate the AnnData object a bit more.\n",
     "\n",
     "Let's move metadata (non-validated cell markers) into `adata.obs`:"
    ]
@@ -204,9 +228,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "features = ln.Feature.from_df(\n",
-    "    adata.obs\n",
-    ")  # Feature.from_df create feature records with type auto-populated"
+    "# Feature.from_df creates feature records with type auto-populated\n",
+    "features = ln.Feature.from_df(adata.obs)"
    ]
   },
   {
@@ -283,7 +306,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Register ![](https://img.shields.io/badge/Register-10b981)"
+    "### Register ![](https://img.shields.io/badge/Register-10b981)"
    ]
   },
   {
@@ -354,14 +377,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Validate and register a second dataset"
+    "## FlowIO sample"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's validate and register another flow file:"
+    "Let's transform, validate and register another flow file:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Transform ![](https://img.shields.io/badge/Transform-10b981)\n",
+    "\n",
+    "There are no further transformations necessary."
    ]
   },
   {
@@ -379,7 +411,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](https://img.shields.io/badge/Validate-10b981) "
+    "### Validate ![](https://img.shields.io/badge/Validate-10b981) "
    ]
   },
   {
@@ -437,7 +469,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](https://img.shields.io/badge/Register-10b981) "
+    "### Register ![](https://img.shields.io/badge/Register-10b981) "
    ]
   },
   {
@@ -504,7 +536,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Query by cell markers"
+    "### Query by cell markers"
    ]
   },
   {
@@ -663,7 +695,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.10.12"
   },
   "nbproject": {
    "id": "OWuTtS4SApon",
