--- a/docs/bulkrna.ipynb
+++ b/docs/bulkrna.ipynb
@@ -15,6 +15,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Background"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Bulk RNA sequencing (RNA-seq) is a high-throughput technique that measures the gene expression levels of thousands of genes simultaneously, providing insights into overall cellular transcription patterns.\n",
+    "\n",
+    "Here, we'll demonstrate how to make a bulk RNA-seq count matrix data ware house ready and apply the TVR (transform, validate, register) workflow on it."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Setup"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -44,7 +67,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's start simulating the output of a bulk RNA-seq pipeline:"
+    "## nf-core Salmon count matrix"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We start by simulating a [nf-core RNA-seq](https://nf-co.re/rnaseq)) run which yields us a count matrix file."
    ]
   },
   {
@@ -57,7 +87,7 @@
    },
    "outputs": [],
    "source": [
-    "# pretned we're running a bulk RNA-seq pipeline\n",
+    "# pretend we're running a bulk RNA-seq pipeline\n",
     "ln.track(ln.Transform(name=\"nf-core RNA-seq\", reference=\"https://nf-co.re/rnaseq\"))\n",
     "# create a directory for its output\n",
     "Path(\"./test-bulkrna/output_dir\").mkdir(exist_ok=True)\n",
@@ -75,7 +105,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Curate the count matrix ![](https://img.shields.io/badge/Transform-10b981)"
+    "### Transform ![](https://img.shields.io/badge/Transform-10b981)"
    ]
   },
   {
@@ -116,9 +146,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If we look at it, we realize it deviates far from the _tidy data_ standard [Wickham14], conventions of statistics & machine learning [Hastie09, Murphy12] and the major Python & R data packages.\n",
+    "If we look at it, we realize it deviates far from the _tidy data_ standard [Wickham14](https://www.jstatsoft.org/article/view/v059i10), conventions of statistics & machine learning [Hastie09](https://link.springer.com/book/10.1007/978-0-387-84858-7), [Murphy12](https://probml.github.io/pml-book/book0.html) and the major Python & R data packages.\n",
     "\n",
-    "Variables aren't in columns and observations aren't in rows:"
+    "Variables are not in columns and observations are not in rows:"
    ]
   },
   {
@@ -214,7 +244,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Validate ![](https://img.shields.io/badge/Validate-10b981) "
+    "### Validate ![](https://img.shields.io/badge/Validate-10b981) "
    ]
   },
   {
@@ -282,7 +312,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Register ![](https://img.shields.io/badge/Register-10b981)"
+    "### Register ![](https://img.shields.io/badge/Register-10b981)"
    ]
   },
   {
@@ -387,7 +417,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# lookup object for auto-complete\n",
     "genes = lb.Gene.lookup()"
    ]
   },
@@ -406,7 +435,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# a feature set containing SPO7 gene and contain RNA measurements\n",
+    "# a feature set containing RNA measurements and SPO7 gene expression\n",
     "feature_set = ln.FeatureSet.filter(genes=genes.spo7, modality__name=\"rna\").first()"
    ]
   },
@@ -437,7 +466,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py39",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -451,7 +480,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.10.12"
   },
   "nbproject": {
    "id": "s5V0dNMVwL9i",
@@ -465,5 +494,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
