♻️ Refactor project flow

--- a/docs/analysis-flow.ipynb
+++ b/docs/analysis-flow.ipynb
@@ -12,16 +12,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Analyst's view"
+    "# Analysis flow"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here, we'll take an analysts-centric view of typical file transformations.\n",
+    "Here, we'll track typical data transformations like subsetting that occur during analysis.\n",
     "\n",
-    "If exploring more generally, read this first: {doc}`/birds-eye`."
+    "If exploring more generally, read this first: {doc}`/project-flow`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Setup"
    ]
   },
   {
@@ -477,7 +484,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Examine data lineage"
+    "## Examine data flow"
    ]
   },
   {
