--- a/docs/project-flow.ipynb
+++ b/docs/project-flow.ipynb
@@ -158,7 +158,7 @@
     "input_file = ln.File.filter(key=\"schmidt22-crispra-gws-IFNG.csv\").one()\n",
     "# identify hits\n",
     "input_df = input_file.load().set_index(\"id\")\n",
-    "output_df = df[df[\"pos|fdr\"] < 0.01].copy()\n",
+    "output_df = input_df[input_df[\"pos|fdr\"] < 0.01].copy()\n",
     "# register hits in output file\n",
     "ln.File(output_df, description=\"hits from schmidt22 crispra GWS\").save()"
    ]
@@ -198,7 +198,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "tags": []
+    "tags": [
+     "hide-output"
+    ]
    },
    "outputs": [],
    "source": [
@@ -243,7 +245,7 @@
     "ln.track(transform)\n",
     "# access uploaded files as inputs for the pipeline\n",
     "input_files = ln.File.filter(key__startswith=\"fastq/perturbseq\").all()\n",
-    "input_paths = [file.stage() for file in files]\n",
+    "input_paths = [file.stage() for file in input_files]\n",
     "# register output files\n",
     "output_files = ln.File.from_dir(\"./mydata/perturbseq/filtered_feature_bc_matrix/\")\n",
     "ln.save(output_files)"
@@ -322,6 +324,7 @@
     "\n",
     "file_ps = ln.File.filter(description__icontains=\"perturbseq\").one()\n",
     "adata = file_ps.load()\n",
+    "file_hits = ln.File.filter(description=\"hits from schmidt22 crispra GWS\").one()\n",
     "screen_hits = file_hits.load()\n",
     "\n",
     "import scanpy as sc\n",
@@ -359,12 +362,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "ln.track()\n",
     "file = ln.File.filter(key__contains=\"figures/matrixplot\").one()\n",
-    "file.stage()\n",
+    "file.stage()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "display(Image(filename=file.path))"
    ]
   },
@@ -398,15 +413,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "transform = ln.Transform.search(\"Bird's eye view\", return_queryset=True).first()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "transform = ln.Transform.search(\"Bird's eye view\", return_queryset=True).first()\n",
     "transform.parents.df()"
    ]
   },
@@ -647,7 +654,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.9.16"
   },
   "nbproject": {
    "id": "1LCd8kco9lZU",
