--- a/docs/project-flow.ipynb
+++ b/docs/project-flow.ipynb
@@ -228,7 +228,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Process uploaded files using a script or workflow manager: {doc}`pipelines` and obtain 3 output files in a directory `filtered_feature_bc_matrix/`:"
+    "Process uploaded files using a script or workflow manager: {doc}`docs:pipelines` and obtain 3 output files in a directory `filtered_feature_bc_matrix/`:"
    ]
   },
   {
