♻️ Refactor project flow (#55)

--- a/docs/project-flow.ipynb
+++ b/docs/project-flow.ipynb
@@ -12,14 +12,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Bird's eye view"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Background"
+    "# Project flow"
    ]
   },
   {
@@ -27,10 +20,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Data lineage tracks data's journey, detailing its origins, transformations, and interactions to trace biological insights, verify experimental outcomes, meet regulatory standards, and increase the robustness of research.\n",
-    "While tracking data lineage is easier when it is governed by deterministic pipelines, it becomes hard when its governed by interactive human-driven analyses.\n",
+    "LaminDB enables to model data flow on the entire-project level.\n",
     "\n",
-    "Here, we'll backtrace file transformations through notebooks, pipelines & app uploads in a research project based on [Schmidt22](https://pubmed.ncbi.nlm.nih.gov/35113687/) which conducted genome-wide CRISPR activation and interference screens in primary human T cells to identify gene networks controlling IL-2 and IFN-γ production."
+    "Here, we walk through exemplified app uploads, pipelines & notebooks following [Schmidt _et al._, 2022](https://pubmed.ncbi.nlm.nih.gov/35113687/): A genome-wide CRISPR screen reading out a phenotypic endpoint on T cells is paired with scRNA-seq to generate insights into IFN-γ production.\n",
+    "\n",
+    "These insights get linked back to the original data through the steps taken in the project to provide context for interpretation & future decision making.\n",
+    "\n",
+    ":::{dropdown} More specifically: Why should I care about data flow?\n",
+    "\n",
+    "Data flow tracks data sources & transformations to trace biological insights, verify experimental outcomes, meet regulatory standards, increase the robustness of research and optimize the feedback loop of team-wide learning iterations.\n",
+    "\n",
+    "While tracking data flow is easier when it's governed by deterministic pipelines, it becomes hard when it's governed by interactive human-driven analyses.\n",
+    "\n",
+    "LaminDB interfaces workflow mangers for the former and embraces the latter.\n",
+    "\n",
+    ":::"
    ]
   },
   {
@@ -44,7 +48,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We need an instance:"
+    "Init a test instance:"
    ]
   },
   {
@@ -73,14 +77,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import lamindb as ln"
+    "import lamindb as ln\n",
+    "from IPython.display import Image, display"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We simulate the raw data processing of Schmidt22 with toy data in a real world setting with multiple collaborators (here testuser1 and testuser2):"
+    "## Steps"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the following, we walk through exemplified steps. The full notebooks are in [this repository](https://github.com/laminlabs/rnd-demo)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### App upload of phenotypic data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Register data through app upload from wetlab by `testuser1`:"
    ]
   },
   {
@@ -93,214 +119,55 @@
    },
    "outputs": [],
    "source": [
-    "assert ln.setup.settings.user.handle == \"testuser1\"\n",
-    "\n",
-    "bfx_run_output = ln.dev.datasets.dir_scrnaseq_cellranger(\n",
-    "    \"perturbseq\", basedir=ln.settings.storage, output_only=False\n",
-    ")\n",
-    "ln.track(ln.Transform(name=\"Chromium 10x upload\", type=\"pipeline\"))\n",
-    "ln.File(bfx_run_output.parent / \"fastq/perturbseq_R1_001.fastq.gz\").save()\n",
-    "ln.File(bfx_run_output.parent / \"fastq/perturbseq_R2_001.fastq.gz\").save()"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Track a bioinformatics pipeline"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "When working with a pipeline, we'll register it before running it.\n",
-    "\n",
-    "This only happens once and could be done by anyone on your team."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ln.setup.login(\"testuser2\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "transform = ln.Transform(name=\"Cell Ranger\", version=\"7.2.0\", type=\"pipeline\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ln.User.filter().df()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "transform"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ln.track(transform)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now, let's stage a few files from an instrument upload:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "files = ln.File.filter(key__startswith=\"fastq/perturbseq\").all()\n",
-    "filepaths = [file.stage() for file in files]"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Assume we processed them and obtained 3 output files in a folder `'filtered_feature_bc_matrix'`:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "output_files = ln.File.from_dir(\"./mydata/perturbseq/filtered_feature_bc_matrix/\")\n",
-    "ln.save(output_files)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's look at the data lineage at this stage:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "output_files[0].view_lineage()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "And let's keep running the Cell Ranger pipeline in the background."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-cell"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "transform = ln.Transform(\n",
-    "    name=\"Preprocess Cell Ranger outputs\", version=\"2.0\", type=\"pipeline\"\n",
-    ")\n",
-    "ln.track(transform)\n",
-    "[f.stage() for f in output_files]\n",
-    "filepath = ln.dev.datasets.schmidt22_perturbseq(basedir=ln.settings.storage)\n",
-    "file = ln.File(filepath, description=\"perturbseq counts\")\n",
-    "file.save()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Track app upload & analytics"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The hidden cell below simulates additional analytic steps including:\n",
-    "\n",
-    "* uploading phenotypic screen data\n",
-    "* scRNA-seq analysis\n",
-    "* analyses of the integrated datasets"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-cell"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "# app upload\n",
     "ln.setup.login(\"testuser1\")\n",
     "transform = ln.Transform(name=\"Upload GWS CRISPRa result\", type=\"app\")\n",
     "ln.track(transform)\n",
-    "filepath = ln.dev.datasets.schmidt22_crispra_gws_IFNG(ln.settings.storage)\n",
-    "file = ln.File(filepath, description=\"Raw data of schmidt22 crispra GWS\")\n",
-    "file.save()\n",
-    "\n",
-    "# upload and analyze the GWS data\n",
-    "ln.setup.login(\"testuser2\")\n",
-    "transform = ln.Transform(name=\"GWS CRIPSRa analysis\", type=\"notebook\")\n",
-    "ln.track(transform)\n",
-    "file_wgs = ln.File.filter(key=\"schmidt22-crispra-gws-IFNG.csv\").one()\n",
-    "df = file_wgs.load().set_index(\"id\")\n",
-    "hits_df = df[df[\"pos|fdr\"] < 0.01].copy()\n",
-    "file_hits = ln.File(hits_df, description=\"hits from schmidt22 crispra GWS\")\n",
-    "file_hits.save()"
+    "output_path = ln.dev.datasets.schmidt22_crispra_gws_IFNG(ln.settings.storage)\n",
+    "output_file = ln.File(output_path, description=\"Raw data of schmidt22 crispra GWS\")\n",
+    "output_file.save()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's see what the data lineage of this looks:"
+    "### Hit identification in notebook"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Access, transform & register data in drylab by `testuser2`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "ln.setup.login(\"testuser2\")\n",
+    "transform = ln.Transform(name=\"GWS CRIPSRa analysis\", type=\"notebook\")\n",
+    "ln.track(transform)\n",
+    "# access\n",
+    "input_file = ln.File.filter(key=\"schmidt22-crispra-gws-IFNG.csv\").one()\n",
+    "# identify hits\n",
+    "input_df = input_file.load().set_index(\"id\")\n",
+    "output_df = input_df[input_df[\"pos|fdr\"] < 0.01].copy()\n",
+    "# register hits in output file\n",
+    "ln.File(output_df, description=\"hits from schmidt22 crispra GWS\").save()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Inspect data flow:"
    ]
   },
   {
@@ -317,7 +184,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the backgound, somebody integrated and analyzed the outputs of the app upload and the Cell Ranger pipeline:"
+    "### Sequencer upload"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Upload files from sequencer:"
    ]
   },
   {
@@ -325,20 +199,132 @@
    "execution_count": null,
    "metadata": {
     "tags": [
-     "hide-cell"
+     "hide-output"
     ]
    },
    "outputs": [],
    "source": [
-    "# Let us add analytics on top of the cell ranger pipeline and the phenotypic screening\n",
+    "ln.setup.login(\"testuser1\")\n",
+    "ln.track(ln.Transform(name=\"Chromium 10x upload\", type=\"pipeline\"))\n",
+    "# register output files of upload\n",
+    "upload_dir = ln.dev.datasets.dir_scrnaseq_cellranger(\n",
+    "    \"perturbseq\", basedir=ln.settings.storage, output_only=False\n",
+    ")\n",
+    "ln.File(upload_dir.parent / \"fastq/perturbseq_R1_001.fastq.gz\").save()\n",
+    "ln.File(upload_dir.parent / \"fastq/perturbseq_R2_001.fastq.gz\").save()\n",
+    "ln.setup.login(\"testuser2\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Track scRNA-seq bioinformatics pipeline"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Process uploaded files using a script or workflow manager: {doc}`docs:pipelines` and obtain 3 output files in a directory `filtered_feature_bc_matrix/`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "transform = ln.Transform(name=\"Cell Ranger\", version=\"7.2.0\", type=\"pipeline\")\n",
+    "ln.track(transform)\n",
+    "# access uploaded files as inputs for the pipeline\n",
+    "input_files = ln.File.filter(key__startswith=\"fastq/perturbseq\").all()\n",
+    "input_paths = [file.stage() for file in input_files]\n",
+    "# register output files\n",
+    "output_files = ln.File.from_dir(\"./mydata/perturbseq/filtered_feature_bc_matrix/\")\n",
+    "ln.save(output_files)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Inspect data lineage:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_files[0].view_lineage()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Post-process Cell Ranger:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "transform = ln.Transform(name=\"Postprocess Cell Ranger\", version=\"2.0\", type=\"pipeline\")\n",
+    "ln.track(transform)\n",
+    "input_files = [f.stage() for f in output_files]\n",
+    "output_path = ln.dev.datasets.schmidt22_perturbseq(basedir=ln.settings.storage)\n",
+    "output_file = ln.File(output_path, description=\"perturbseq counts\")\n",
+    "output_file.save()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Integrate scRNA-seq & CRISPR screen results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Integrate data in a notebook:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
     "transform = ln.Transform(\n",
-    "    name=\"Perform single cell analysis, integrating with CRISPRa screen\",\n",
+    "    name=\"Perform single cell analysis, integrate with CRISPRa screen\",\n",
     "    type=\"notebook\",\n",
     ")\n",
     "ln.track(transform)\n",
     "\n",
     "file_ps = ln.File.filter(description__icontains=\"perturbseq\").one()\n",
     "adata = file_ps.load()\n",
+    "file_hits = ln.File.filter(description=\"hits from schmidt22 crispra GWS\").one()\n",
     "screen_hits = file_hits.load()\n",
     "\n",
     "import scanpy as sc\n",
@@ -362,38 +348,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The outcome of it are a few figures stored as image files. Let's query one of them and look at the data lineage:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Track notebooks"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We'd now like to track the current Jupyter notebook to continue the work:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ln.track()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Visualize data lineage"
+    "### Review results"
    ]
   },
   {
@@ -407,14 +362,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "ln.track()\n",
+    "file = ln.File.filter(key__contains=\"figures/matrixplot\").one()\n",
+    "file.stage()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "file = ln.File.filter(key__contains=\"figures/matrixplot\").one()\n",
-    "\n",
-    "from IPython.display import Image, display\n",
-    "\n",
-    "file.stage()\n",
     "display(Image(filename=file.path))"
    ]
   },
@@ -439,7 +404,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Alternatively, we can also purely look at the sequence of transforms and ignore the files:"
+    "Alternatively, we can also look at the sequence of transforms:"
    ]
   },
   {
@@ -448,15 +413,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "transform = ln.Transform.search(\"Bird's eye view\", return_queryset=True).first()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "transform = ln.Transform.search(\"Bird's eye view\", return_queryset=True).first()\n",
     "transform.parents.df()"
    ]
   },
@@ -697,7 +654,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.9.16"
   },
   "nbproject": {
    "id": "1LCd8kco9lZU",
