🚚 Rename data lineage to data flow

--- a/docs/analysis-flow.ipynb
+++ b/docs/analysis-flow.ipynb
@@ -248,7 +248,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file.view_lineage()"
+    "file.view_flow()"
    ]
   },
   {
@@ -541,7 +541,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "my_subset.view_lineage()"
+    "my_subset.view_flow()"
    ]
   },
   {
