--- a/docs/bulkrna.ipynb
+++ b/docs/bulkrna.ipynb
@@ -401,7 +401,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "curated_file.view_lineage()"
+    "curated_file.view_flow()"
    ]
   },
   {
