--- a/docs/celltypist.ipynb
+++ b/docs/celltypist.ipynb
@@ -548,7 +548,7 @@
     "So we decide to:\n",
     "\n",
     "- Add the \"T cells\" to the synonyms of the public \"T cell\" record\n",
-    "- Create the remaining 3 terms only using their names (we think \"B cell lineage\" shouldn't be identified with \"B cell\")"
+    "- Create the remaining 3 terms only using their names (we think \"B cell flow\" shouldn't be identified with \"B cell\")"
    ]
   },
   {
@@ -890,7 +890,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_annotated.view_lineage()"
+    "file_annotated.view_flow()"
    ]
   },
   {
