--- a/docs/project-flow.ipynb
+++ b/docs/project-flow.ipynb
@@ -177,7 +177,7 @@
    "outputs": [],
    "source": [
     "file = ln.File.filter(description=\"hits from schmidt22 crispra GWS\").one()\n",
-    "file.view_lineage()"
+    "file.view_flow()"
    ]
   },
   {
@@ -255,7 +255,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Inspect data lineage:"
+    "Inspect data flow:"
    ]
   },
   {
@@ -264,7 +264,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "output_files[0].view_lineage()"
+    "output_files[0].view_flow()"
    ]
   },
   {
@@ -396,7 +396,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file.view_lineage()"
+    "file.view_flow()"
    ]
   },
   {
