--- a/docs/project-flow.ipynb
+++ b/docs/project-flow.ipynb
@@ -20,9 +20,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "LaminDB enables to model data flow on the entire-project level.\n",
+    "LaminDB allows tracking data flow on the entire project level.\n",
     "\n",
-    "Here, we walk through exemplified app uploads, pipelines & notebooks following [Schmidt _et al._, 2022](https://pubmed.ncbi.nlm.nih.gov/35113687/): A genome-wide CRISPR screen reading out a phenotypic endpoint on T cells is paired with scRNA-seq to generate insights into IFN-γ production.\n",
+    "Here, we walk through exemplified app uploads, pipelines & notebooks following [Schmidt _et al._, 2022](https://pubmed.ncbi.nlm.nih.gov/35113687/).\n",
+    "\n",
+    "A CRISPR screen reading out a phenotypic endpoint on T cells is paired with scRNA-seq to generate insights into IFN-γ production.\n",
     "\n",
     "These insights get linked back to the original data through the steps taken in the project to provide context for interpretation & future decision making.\n",
     "\n",
@@ -92,14 +94,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the following, we walk through exemplified steps. The full notebooks are in [this repository](https://github.com/laminlabs/rnd-demo)."
+    "In the following, we walk through exemplified steps covering different types of transforms ({class}`~docs:lamindb.Transform`).\n",
+    "\n",
+    "```{note}\n",
+    "\n",
+    "The full notebooks are in [this repository](https://github.com/laminlabs/rnd-demo).\n",
+    "\n",
+    "```"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### App upload of phenotypic data"
+    "### App upload of phenotypic data ![](https://img.shields.io/badge/app-444444)"
    ]
   },
   {
@@ -131,7 +139,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Hit identification in notebook"
+    "### Hit identification in notebook ![](https://img.shields.io/badge/notebook-444444)"
    ]
   },
   {
@@ -184,7 +192,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Sequencer upload"
+    "### Sequencer upload ![](https://img.shields.io/badge/pipeline-444444)"
    ]
   },
   {
@@ -220,7 +228,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Track scRNA-seq bioinformatics pipeline"
+    "### scRNA-seq bioinformatics pipeline ![](https://img.shields.io/badge/pipeline-444444)"
    ]
   },
   {
@@ -255,23 +263,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Inspect data flow:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "output_files[0].view_flow()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Post-process Cell Ranger:"
+    "Post-process these 3 files:"
    ]
   },
   {
@@ -296,7 +288,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Integrate scRNA-seq & CRISPR screen results"
+    "Inspect data flow:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_files[0].view_flow()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Integrate scRNA-seq & phenotypic data ![](https://img.shields.io/badge/notebook-444444)"
    ]
   },
   {
@@ -348,7 +356,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Review results"
+    "## Review results"
    ]
   },
   {
