--- a/docs/spatial.ipynb
+++ b/docs/spatial.ipynb
@@ -15,12 +15,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Setup"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "tags": [
-     "hide-cell"
-    ]
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -59,7 +64,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here we have a spatial gene expression dataset measured using [Visium](https://www.10xgenomics.com/products/spatial-gene-expression) from [Suo22](https://developmental.cellatlas.io/fetal-immune).\n",
+    "## Access"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here, we have a spatial gene expression dataset measured using [Visium](https://www.10xgenomics.com/products/spatial-gene-expression) from [Suo22](https://developmental.cellatlas.io/fetal-immune).\n",
     "\n",
     "This dataset contains two parts:\n",
     "\n",
@@ -105,7 +117,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Register the AnnData and image file as a dataset"
+    "## Register"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We'll register the single-cell data and the image as a Dataset."
    ]
   },
   {
